# openai-devday

./: README.md  pyproject.toml
notebooks/: Assistants_API_overview_python.ipynb  parallel_function_calling_assistant.ipynb  video_understanding.ipynb  weather_assistant.ipynb
notebooks/assistant_api/: ai-assistants.ipynb  langchain_oai_assistants.ipynb  parallel_function_calling_assistant.ipynb
notebooks/langchain_cookbook/: intro_to_LCEL.ipynb
notebooks/multimodal/: GPT4_Vision_Resume_Data_Extraction.ipynb  Using_GPT4_Vision_With_Function_Calling.ipynb  introduction_to_gpt4o.ipynb
notebooks/tool-using-agents/: Function_calling_finding_nearby_places.ipynb  Using_tool_required_for_customer_service.ipynb  oai-agents.ipynb
notebooks/vision/: GPT_with_vision_for_video_understanding.ipynb  image_understanding.ipynb  pika-hello.ipynb
scripts/: oai-agent.py  parallel_func_calling.py
